Add Geist, touch up mobile layout, finish Onchain Nucleus, and small tweak to 2023 Recap

--- a/src/pages/articles/2023-recap.mdx
+++ b/src/pages/articles/2023-recap.mdx
@@ -12,7 +12,7 @@ import MdxLayout from '../../components/MdxLayout'
 
 My 2023 was defined by two things: **a move to LA and going all in on projects.**
 
-On the heels of a gap semester where I built a spatial browsing app, I started the year off back in DC at GW. It was nice to be back in Washington and see my friends, but it was also great because I started to get back into new projects. At the end of my gap semester, I felt a bit down about what I had built and said I was going to focus on other projects to take a break and make some money while in school. At the end of 2022/the beginning of 2023 before I left for DC, I was finding it difficult to think about what I could build in tech next if I put Cortex aside -- but when I got to DC I stumbled upon a web2 freelancing opportunity from someone I'd previously done some contracting for, and that opportunity started to get me back in the groove a bit. 
+On the heels of a gap semester where I built a spatial browsing app, I started the year off back in DC at GW. It was nice to be back in Washington and to see my friends, but it was also great because I started to get back into new projects. At the end of my gap semester, I felt a bit down about what I had built and said I was going to focus on other projects to take a break and make some money while in school. At the end of 2022/the beginning of 2023 before I left for DC, I was finding it difficult to think about what I could build in tech next if I put Cortex aside -- but when I got to DC I stumbled upon a web2 freelancing opportunity from someone I'd previously done some contracting for, and that opportunity started to get me back in the groove a bit. 
 
 It was in a field I needed to brush up in a bit and I wanted to make sure I did really well on this project, so I went to work for a few weeks straight, shuffling between VSCode, docs, and ChatGPT(one of my first real chances to see how it could help with a project). At the same time I also started to focus more on writing, publishing 18 articles with 68 subscribers on Substack(and cross-posted on my site and Paragraph). I started a weekly series called "Next In Tech", where at the end of every week I'd round up some of the top stories that caught my eye, as well as a few updates on what I was working on. Writing "Next In Tech" helped me not only share my thoughts on topics/what's trending, but it also gave me a consistent posting schedule to follow. 
 
@@ -24,7 +24,7 @@ I also joined [Chapter One's Research Program](https://twitter.com/chapterone/st
 
 After the research program, Fund PG, and Group Purple, I spent quite a bit of time building v1 of [Casterscan](https://casterscan.com) with [Yash Karthik](https://warpcast.com/yashkarthik) -- a block explorer for Farcaster inspired by a mockup I did of Etherscan but for Farcaster. Since so much had happened with hubs and devs now had more tools to sync the whole network to a database, I felt it would be important to track data the way a block explorer does. I was also spending a lot more time on Farcaster, as I have this year, and thought this could be a cool project. 
 
-I then started a big journey out west to move to LA. The move has two reasons: the first is to transfer to Santa Monica College, and the other is to be closer to the tech ecosystem. A big reason was also that I had an internship in-person this summer with Triangle Labs. I had an incredible time working with them and learned more from the experience than I have any other position. I started off the summer working on features for a mobile crypto browser but pivoted to work on the backend for [Glimpse](https://glimpse.surf), an AI-powered assistant that can chat with the Internet. I felt like there was a lot of shared vision for a new Internet and I really enjoyed learning from and working with the team. They gave me the space and skills to be able to work -- and I'm forever grateful for the opportunity. I also spent time this summer as a Platform Fellow at [Double Down](https://double-down.com), a VC firm focused on the mainstream adoption of crypto. It was super valuable for me to learn from Mags and Amac's deep consumer backgrounds, as well as from the other fellows.
+I then started a big journey out west to move to LA. The move had two reasons: the first was to transfer to Santa Monica College, and the other was to be closer to the tech ecosystem. A big reason was also that I had an internship in-person this summer with Triangle Labs. I had an incredible time working with them and learned more from the experience than I have any other position. I started off the summer working on features for a mobile crypto browser but pivoted to work on the backend for [Glimpse](https://glimpse.surf), an AI-powered assistant that can chat with the Internet. I felt like there was a lot of shared vision for a new Internet and I really enjoyed learning from and working with the team. They gave me the space and skills to be able to work -- and I'm forever grateful for the opportunity. I also spent time this summer as a Platform Fellow at [Double Down](https://double-down.com), a VC firm focused on the mainstream adoption of crypto. It was super valuable for me to learn from Mags and Amac's deep consumer backgrounds, as well as from the other fellows.
 
 Going into the fall, I knew that I wanted to take everything I'd learned from the year and apply it to two areas: Cortex and Farcaster. Cortex is my years long research into what the future workspace looks like, and though it's something I gave up for a bit going into the year, by the fall I found myself newly inspired to do new research. And for Farcaster, there were a few things I wanted to build that I felt could either connect with Cortex or was related in spirit and just made more sense as a Farcaster community utility. 
 
@@ -32,7 +32,7 @@ Going into the fall, I knew that I wanted to take everything I'd learned from th
 
 On the Farcaster side of things, I kicked the fall off by launching Casterscan v2, a redesign that made it easier to see relevant data and relied on a new indexer. I also shipped a redesign of the PurpleDAO website(more coming in early '24) and Group Purple moved from Juicebox to Party Bid, while growing from 3 Purple tokens to 8. The largest of them all, I launched Farcaster Kit, React hooks and middleware for the best React apps. It's already used by Casterscan and 80 weekly active API users, as well as a new client Litecast I'm shipping soon(from dwr.eth's bounty). The key theme with my Farcaster projects has been accessibility: making casts easier to view with Casterscan, bringing easier membership access(and group discussion) to Purple through Group Purple, and helping overall DevEx with Farcaster Kit. While there might be ways for Farcaster projects to overlap with Cortex so I can double my efforts/not re-write code, my main goal with Farcaster projects is to make things that are accessible and impactful, and I'll continue to do so(plus maintain my projects) with a good portion of my time.
 
-And on the Cortex side of things, while some of the time I intended to use for launches went to Farcaster projects, I did a lot of important research for Cortex towards the end of the year that I'm going to put to serious work as my main focus in 2024 and beyond. I built a proof of concept(called Timeline) that syncs my Brave Browser history, Farcaster casts, and Markdown notes into a timeline. I was able to use and iterate on Timeline internally, and I'm taking what I learned from it to launch a beta version of Cortex in early 2024. *include thinking about what learned from Cortex*
+And on the Cortex side of things, while some of the time I intended to use for launches went to Farcaster projects, I did a lot of important research for Cortex towards the end of the year that I'm going to put to serious work as my main focus in 2024 and beyond. I built a proof of concept(called Timeline) that syncs my Brave Browser history, Farcaster casts, and Markdown notes into a timeline. I was able to use and iterate on Timeline internally, and I'm taking what I learned from it to launch a beta version of Cortex in early 2024.
 
 <CldImage src="media/openai-dev-day-recap-yt-thumbnail.png" alt="OpenAI Dev Day" width="550" height="550" className="p-2 pt-0 rounded-2xl" />
 
@@ -49,7 +49,7 @@ Here are some trends that I see for 2024:
 	One thing we're seeing from the top LLM vendors and LLM-enabled products is that whoever supports and builds products with memory built-in will win. While some think OpenAI is ahead here, a slew of agents and software/hardware products are building convincing end-user apps with long-standing memory at the center. 
 
 **Your Farcaster graph will become synonymous to your ENS, and new pockets of capital will open up on Farcaster.**
-	With your Farcaster social graph, one thing stands out the most: reputation. This could be your follower count, what people know you for, or even your bounties/receipts. Because of how much reputation is growing across many sectors on Farcaster, I think it's safe to say many more apps will support Farcaster, the same way ENS has quickly become a naming convention that's widely accepted. Additionally, Farcaster reputation showing up in other apps and new sub-communities forming through channels, I think new sectors of businesses will form that not only bring capital to the ecosystem but also will help expand/grow the protocol. 
+	With your Farcaster social graph, one thing stands out the most: reputation. This could be your follower count, what people know you for, or even your bounties/receipts. Because of how much reputation is growing across many sectors on Farcaster, I think it's safe to say many more apps will support Farcaster, the same way ENS has quickly become a naming convention that's widely accepted. Additionally, with Farcaster reputation showing up in other apps and new sub-communities forming through channels, I think new sectors of businesses will form that not only bring capital to the ecosystem but also will help expand/grow the protocol. 
 
 <h1 className="text-lg font-medium">My 2024</h1>
 Here are some of my plans/resolutions/goals for 2024:
