--- a/src/pages/articles/onchain-nucleus.mdx
+++ b/src/pages/articles/onchain-nucleus.mdx
@@ -2,11 +2,12 @@ import MdxLayout from '../../components/MdxLayout'
 
 <ArticleMetaTags 
   title="Onchain Nucleus" 
-  description="Onchain Nucleus"
+  description="Read about why I think DAOs have a coordination problem and what an onchain nucleus can do to solve it"
   slug="onchain-nucleus"
-  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704580468/media/onchain-nucleus-og-image.png"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1705785983/media/onchain-nucleus-og-image.png"
 />
-{/* TODO: update the og:image */}
+
+<MintOnZora url="https://zora.co/collect/base:0x87aecc43bb1dab2b012feccd3aa888154fb1bebe/2" />
 
 DAOs have a _coordination problem_. For most DAOs, this coordination problem is shown in two ways:
 
