Small grammatical changes before merging

--- a/src/pages/articles/onchain-nucleus.mdx
+++ b/src/pages/articles/onchain-nucleus.mdx
@@ -12,10 +12,10 @@ import MdxLayout from '../../components/MdxLayout'
 DAOs have a _coordination problem_. For most DAOs, this coordination problem is shown in two ways:
 
 **Lack of mission** 
-Lots of DAOs get misguided because there was never a mission in the first place. As a DAO and its resources grow, it can become easier for plans to deviate and alterior motives to creep up. Some of the best DAOs have very clear missions, and some have even been single purpose DAOs(eg. [ConstitutionDAO](https://www.constitutiondao.com)).
+Lots of DAOs become misguided because they never had a mission in the first place. As a DAO and its resources grow, it can become easier for plans to deviate and ulterior motives to creep up. Some of the best DAOs have very clear missions, and some have even been single purpose DAOs(eg. [ConstitutionDAO](https://www.constitutiondao.com)).
 
 **Lack of data transparency** 
-The ongoings and info surrounding the DAO are so scattered that it's even harder for members to participate -- and just because web3 makes data available on public ledgers doesn't always mean it's accessible/legible! Because it can be so difficult to find out even simple details/take simple actions about a DAO, many members dormantly sit around.
+The ongoings and info surrounding the DAO are so scattered that it's even harder for members to participate. And just because web3 makes data available on public ledgers doesn't always mean it's accessible/legible! Because it can be so difficult to find out even simple details/take simple actions about a DAO, many members dormantly sit around.
 
 I think the solution to this problem is creating an **onchain nucleus:** a homepage for each DAO that clearly showcases its ongoings, as well as offers tooling out-the-box. While it doesn't change the need for people to coordinate around a *goal*, it makes the act of bringing your DAO together much easier, which is hopefully an incentive. In this article I'm going to outline where in the Ethereum ecosystem this problem is apparent, how an onchain nucleus(nuclei?) could take form, and where it already has to certain extents.
 
@@ -25,7 +25,7 @@ I think the answer to "Where is data transparency missing"? is less about partic
 So with that being said, here are some *areas* of tooling that often tend to confuse or mislead DAO members:
 
 **Action discovery**
-Sometimes a DAO can be using multiple tools but not effeciently linking to where those tools exist or how to operate them. For example -- your DAO might've been created through Nouns Builder, but you use Snapshot for voting, Prop House for community rounds, and CharmVerse for your docs. While each of these tools are individually great and have their own tooling, this creates a lot for members to keep track of.
+Sometimes a DAO can be using multiple tools but not efficiently linking to where those tools exist or how to operate them. For example -- your DAO might've been created through [Nouns Builder](https://nouns.build), but you use [Snapshot](https://snapshot.org) for voting, [Prop House](https://prop.house) for community rounds, and [CharmVerse](https://www.charmverse.io/) for your docs. While each of these tools are individually great and have their own tooling, this creates a lot for members to keep track of.
 
 **Analytics**
 Similar to how it can be difficult to locate where things are taking place/what's actually happening in a DAO, it can be equally if not more difficult to run basic analytics on that data. Some of it is becoming easier with tools like Dune, but lots of a DAO's data either isn't organized well for analytics or is missing crucial offchain data.
@@ -64,7 +64,7 @@ I think that while a lot can be said about the steps you take to organize your D
 
 For this reason I think having an onchain nucleus is one of the most important things for DAO, because it gives members the tools needed to see how a DAO works and make changes.
 
-My aside to this is that I think DAOs need structure and it's crazy to think that an autonomous DAO of hundreds, maybe even thousands, of people will vote and stay aware of several votes. There needs to be a fine line between using decentralization to get what you need done and coodinating centrally to make sure it actually gets done.
+My aside to this is that I think DAOs need structure and it's crazy to think that an autonomous DAO of hundreds, maybe even thousands, of people will vote and stay aware of several votes. There needs to be a fine line between using decentralization to get what you need done and coordinating centrally to make sure it actually gets done.
 
 Hopefully having easier access to an onchain nucleus will make it more likely for folks to create or organize their DAOs more!
 
