--- a/src/pages/notes/thoughts-on-building-a-farcaster-client.mdx
+++ b/src/pages/notes/thoughts-on-building-a-farcaster-client.mdx
@@ -4,7 +4,7 @@ import MdxLayout from '../../components/MdxLayout'
   title="Thoughts on building a Farcaster client" 
   description="Some thoughts on building a Farcaster client after spending some time building my own web & mobile client, Litecast."
   slug="thoughts-on-building-a-farcaster-client"
-  image=""
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1706147355/media/thoughts-on-building-a-farcaster-client-og-image.png"
 />
 
 I've been spending a lot more time lately building an open source Farcaster client called **[Litecast](https://litecast.xyz)**. I wanted to share some notes that have popped in my head as I've been in client-land:
