--- a/src/pages/notes/thoughts-on-building-a-farcaster-client.mdx
+++ b/src/pages/notes/thoughts-on-building-a-farcaster-client.mdx
@@ -11,7 +11,7 @@ I've been spending a lot more time lately building an open source Farcaster clie
 
 <div>
 	**Building a Farcaster client is one of the highest leverage/highest impact things you can do in the ecosystem (*major bonus points for mobile dev't*)**
-	[Warpcast](https://warpcast.com) has the vast majority of client market-share and while there are more clients emerging, I'd argue that there aren't enough people competing directly with Warpcast. On top of this, the usage rates both for Warpcast and most apps in general are *significantly higher on mobile* ([Dan](https://warpcast.com/dwr.eth) even shared that ~90% of Twitter usage is on mobile) -- yet Warpcast is the *only* Farcaster client in the Apple App Store & Google Play Store. Honestly, it's a bit shocking that Warpcast is the *only* real mobile client, especially given how much capital there is in the broader Farcaster ecosystem now.<br/>
+	[Warpcast](https://warpcast.com) has the vast majority of client market-share and while there are more clients emerging, I'd argue that there aren't enough people competing directly with Warpcast. On top of this, the usage rates both for Warpcast and most apps in general are *significantly higher on mobile* ([Dan](https://warpcast.com/dwr.eth) even shared that something like ~85% of Twitter usage is on mobile, with [Warpcast sitting at 80% mobile usage](https://warpcast.com/dwr.eth/0x579aeaff)) -- yet Warpcast is the *only* Farcaster client in the Apple App Store & Google Play Store. Honestly, it's a bit shocking that Warpcast is the *only* real mobile client, especially given how much capital there is in the broader Farcaster ecosystem now.<br/>
 	<br/>
 	Building a client not only supports the protocol overall, but it also:
 	- Lets you create the experience you want to: for example I want to add mini-apps and feel like Warpcast probably won't do that(at least soon), but I can bring that experience to others by building it
@@ -45,7 +45,7 @@ I've been spending a lot more time lately building an open source Farcaster clie
 	Anyways, this post isn't meant to be an update on where things are with Litecast or what's coming next -- maybe I'll write up a separate piece on that -- just some loose thoughts on my journey with Farcaster client development and the space as a whole. But if you want to learn more about Litecast in the meantime:
 	<div className="h-auto">
 		- Check out the [web version at litecast.xyz](https://litecast.xyz) and [view the code on GitHub](https://github.com/dylsteck/litecast-web)
-		- Join the testing group for Litecast's TestFlight and [view the code on GitHub](https://github.com/dylsteck/litecast)
+		- [Join the testing group for Litecast's TestFlight](https://warpcast.com/dylsteck.eth/0xc703c109) and [view the code on GitHub](https://github.com/dylsteck/litecast)
 		- Keep up with the latest on Litecast and my other projects by [following me on Farcaster](https://warpcast.com/dylsteck.eth)
 	</div>
 </div>
