fix: build errors and add videos

--- a/app/blog/posts/onchain-nucleus.mdx
+++ b/app/blog/posts/onchain-nucleus.mdx
@@ -28,7 +28,6 @@ Similar to how it can be difficult to locate where things are taking place/what'
 **Communication tools**
 I cannot count how many times I've heard this phrase from people in web3/DAOs: "I hate Telegram/Discord/[insert messaging platform] so much but can't leave because everyone's there". We often find ourselves scrolling between channels and folders in Telegram and while many people find somewhat working solutions, the way modern communication tools are structured makes it so hard to traverse the tree of history.
 
-
 ## Tools that make DAO data transparent
 
 I think that there are some DAOs and DAO tooling platforms that have done really good jobs at making the data *and* actions of a DAO transparent. In no particular order and without nit-picking every detail, here are some DAOs that I think are doing it right:
@@ -39,9 +38,9 @@ ICYMI, [Nouns Builder](https://nouns.build) is a platform to create a Nounish DA
 
 ![nouns.camp website](https://res.cloudinary.com/dz3c2rl2o/image/upload/v1705783444/media/nouns-dot-camp-website-jan-24.png)
 **nouns.camp**
-I think [nouns.camp](https://nouns.camp) is one of the most simple yet informative clients for a DAO that I've seen so far. On one screen you see the most recent activity and have easy access to the different tabs you'd need(eg. connect wallet, draft a prop, etc). 
+I think [nouns.camp](https://nouns.camp) is one of the most simple yet informative clients for a DAO that I've seen so far. On one screen you see the most recent activity and have easy access to the different tabs you'd need(eg. connect wallet, draft a prop, etc).
 
-![https://warpcast.com/dwr.eth/0xb0f5c6f4](https://res.cloudinary.com/dz3c2rl2o/image/upload/v1715499340/media/cast-dwr.eth-0xb0f5c6f44955a01b4583b6e563c752136a94c2d7.png)
+![Cast from Dan Romero on 5/3/2023 announcing Purple DAO proposal notifications in Warpcast](https://res.cloudinary.com/dz3c2rl2o/image/upload/v1715499340/media/cast-dwr.eth-0xb0f5c6f44955a01b4583b6e563c752136a94c2d7.png)
 
 **Warpcast**
 [Warpcast](https://warpcast.com) has three recent features that make it easier for DAOs to coordinate: _DAO proposal notifications, channels, and group chats_. Because many crypto native people are moving to Farcaster, having these features in the protocol's leading app(Warpcast) makes sense -- and it's been helpful for DAO members, especially in [Purple](https://purple.construction).
