--- a/app/blog/posts/2023-recap.mdx
+++ b/app/blog/posts/2023-recap.mdx
@@ -4,4 +4,4 @@ publishedAt: '2024-01-04'
 summary: 'My 2023 was defined by two things: a move to LA and going all in on projects'
 ---
 
-Coming soon!
+My 2023 was defined by two things: a move to LA and going all in on projects
