patch: fix summary text for `farcon-and-farhack-2024.mdx`

--- a/app/blog/posts/farcon-and-farhack-2024.mdx
+++ b/app/blog/posts/farcon-and-farhack-2024.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'FarCon and FarHack 2024'
 publishedAt: '2024-05-13'
-summary: 'My notes and thoughts from last week'
+summary: 'My notes and thoughts from the other week'
 ---
 
 The other week at FarCon and FarHack was one of the most electric and gratifying weeks of my life. From seeing events that took six months to plan come to fruition to witnessing a Cambrian explosion in the developer ecosystem to continuing lifelong-connections with community members -- there's a lot to take away and catch up on from last week. Below is my attempt of doing so!
