fix: typo on `querying` in `free-fip-2`

--- a/app/blog/posts/free-fip-2.mdx
+++ b/app/blog/posts/free-fip-2.mdx
@@ -21,7 +21,7 @@ The actual FIP-2 `parent_url` value for most of today's channels belong to a far
 - a live event like a sports game or a stream: if every cast replied to the URL of the one-time event, then you'd have a live ephemeral chat for that event
 - a site/article that you're browsing: what if you could comment on the web and see what your friends said or tag them? the `parent_url` could easily be an individual website or one of its articles/subroutes
 
-There were a few others experimenting with flexible FIP-2 values in the past, such as [Opencast](https://github.com/stephancill/opencast) allowing users cast a reply to any URL and [Buidler(below)](https://www.launchcaster.xyz/buidler)'s Chrome extension for commenting/viewing comments on any website, however it seems lately the vast majority of FIP-2 attention has gone towards quering data from/posting casts to existing channels.
+There were a few others experimenting with flexible FIP-2 values in the past, such as [Opencast](https://github.com/stephancill/opencast) allowing users cast a reply to any URL and [Buidler(below)](https://www.launchcaster.xyz/buidler)'s Chrome extension for commenting/viewing comments on any website, however it seems lately the vast majority of FIP-2 attention has gone towards querying data from/posting casts to existing channels.
 
 ![the old buidler.app UI for social commenting on FIP-2](https://res.cloudinary.com/dz3c2rl2o/image/upload/v1719519530/media/buidler-fi-old-social-commenting-extension-ui.png)
 
