fix: typo in blog/universal-react

--- a/app/blog/posts/universal-react.mdx
+++ b/app/blog/posts/universal-react.mdx
@@ -58,7 +58,7 @@ Then finally there's a project and set of developers that I'm also super excited
 
 ![Tamagui website](https://res.cloudinary.com/dz3c2rl2o/image/upload/v1729565945/media/tamagui-website-2024.png)
 
-And a few weeks ago the founder of Tamagui, [Nate Wienart](https://x.com/natebirdman), unveiled an exciting new project they'd been working on: [One](https://onestack.dev), a universal React framework with an exciting approach of building a cross-platform framework directly as a single-app Vite plugin. The framework has a lot of features that caught my eye, such as:
+And a few weeks ago the founder of Tamagui, [Nate Wienert](https://x.com/natebirdman), unveiled an exciting new project they'd been working on: [One](https://onestack.dev), a universal React framework with an exciting approach of building a cross-platform framework directly as a single-app Vite plugin. The framework has a lot of features that caught my eye, such as:
 - setting routing globally and per-page to be either a SPA, SSG, SSR, or even a [Hono](https://hono.dev)-backed API route
 - typed file-system routing
 - built-in Tamagui support
