~50% through draft of `2024-recap`

--- a/app/blog/posts/2024-recap.mdx
+++ b/app/blog/posts/2024-recap.mdx
@@ -1,7 +1,37 @@
 ---
 title: '2024 Recap'
-publishedAt: '2024-12-27'
+publishedAt: '2024-12-31'
 summary: 'An overview of everything I built and consumed in 2024'
 ---
 
-🚧 Work in progress! 🚧
+In 2024 I went deeper and deeper into the crypto(particularly Farcaster) community and probably wrote the most code I ever have in one year. Here's a recap of everything I did and consumed in 2024, as well as some thoughts going into 2025:
+
+I started off the year with an awesome opportunity to build Farcaster-related software at [Neynar](https://neynar.com), which I had the pleasure of doing for nine months. I was able to work on their [no-code frame studio](https://neynar.com/nfs), [React SDK](https://github.com/neynarxyz/react), [Explorer](https://explorer.neynar.com) and more -- but most importantly I was able to learn from a top-class team and stay very closely involved in the overall Farcaster ecosystem. I'm very grateful for all the work I was able to do there and it's pushed me to develop my skills more than any role so far has.
+
+I was also part of the team that organized FarCon '24 in Venice Beach and led the inaugural FarHack there([full recap](blog/farcon-and-farhack-2024)). Those few days and that weekend was one of the most fufilling and gratifying times of my life, not just seeing all of that work coming to fruition but also seeing how special this community and the people in it were. And speaking just on FarHack itself, I couldn't have asked for a better turn-out: the projects were amazing, builder energy was super high, and folks were so into the hackathon that the finale on that Sunday was filled with non-developers who just wanted to support the community.
+
+Following the first FarHack, myself and [Luciano](https://warpcast.com/luciano) got some inbound and ideas about future FarHacks -- and I put together a v1 of our hackathon software to use at Edcon in Tokyo as well as Ethereum Singapore. We were also fortunate to have receieved a Base Builder grant for our hackathon software that featured onchain ticketing on Base.
+
+Throughout all of this I also dealt with some big personal changes: leaving school once and for all and returning home to New York. It became pretty clear to me as some of my work earlier in the year ramped up that this was the right time to jump off the deep end, and separately as much as I loved where I was in LA I just felt as though I was missing the community and lifestyle that I have back in New York. And so while decisions about school and my living situation have always been a bit contentious, this time around everything felt just right.
+
+At the end of the year once my work stopped and I had some time to myself I began doing some [redacted] freelancing work, as well as moving my attention to [Cortex](https://withcortex.com). When I was in high school/early into college I was very keen on calling Cortex a browser/OS research project, as that's what it all stemmed from, but I knew this time around I had to make Cortex into some actual product before thinking about any sort of research etc.
+
+And so I set out to make Cortex into a Grok/Perplexity-style assistant but for Farcaster -- it has a set of tools that lets users ask about live content as well as data in adjacent apps(such as Events.xyz, Bountycaster, Clanker, and more). While I separately want to find time to focus on the browser/OS work, I will say that I've enjoyed building & using Cortex as it is right now and am happy I can refer to an actual product instead of a vague research idea whenever I talk about Cortex.
+
+So where does that takes us going into 2025? For one I'm on the hunt for what's next for me and am hoping to have that sorted out soon, I'm wrapping up some contracting/personal work, and I'm thinking about where to take my Cortex work.
+
+The dilemma I often find myself in with crypto is that on one had there's always low-hanging fruit that could be helpful in a field like crypto, but on the other hand there are much larger audiences to reach and so much more exicting tech in the world other than just crypto to be making use of. I keep finding myself crawling back to crypto ideas and saying I need to just crypto-ify everything anyways, but I'd be remiss if I didn't say that I *really* want to find a way to reach for that north star of browser/OS work, whatever shape that might take right now.
+
+But whichever way my projects turn out, I'm confident that 2024 has given me the skills and perseverance to figure out what steps I need to take.
+
+## Forecast
+Here are some trends that I see for 2025:
+
+## My 2025
+Here are some things I hope for myself in 2025:
+
+## Best of 2024
+My favorite products, content, and writing from 2024
+
+## 2024 Recap
+Every project and piece of content I launched or helped work on this year
